# Predictive_Pulse-MLOps-Driven_Cardiac_Risk_Assessment

./: .gitignore  README.md  app.py  main.py  mlflow_local_integration.py  pyproject.toml
app/models/: MLmodel  conda.yaml  model.xgb  python_env.yaml
notebooks/: Heart Failure Prediction 📚.ipynb
